# gcp-eve-ng

./: .gitignore  Dockerfile  Makefile  README.md  ansible.cfg  install-debian.sh  inventory-example.gcp.yml  pyproject.toml
common/: pyenv-installer.sh
infrastructure/: main.tf  provider.tf  variables.tf
infrastructure/base/: firewall.tf  network.tf  outputs.tf  provider.tf  variables.tf  vmx_image.tf
infrastructure/overlay/: gcp_vm.tf  provider.tf  variables.tf
infrastructure/vars/: secrets-example.tfvars
playbooks/: ansible.cfg
roles/: requirements.yml
terraform/: provider.tf
