[tool.poetry]
name = "gcp-eve-ng"
version = "0.1.0"
description = "Create, run and provision EVE-NG in the GCP cloud"
authors = ["Marcos Soutullo <marcos.soutullo91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
molecule = "^3.0.4"
google-auth = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
